# RubinLSSTSkyAlerts

./: .copier-answers.yml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
articles/newsletter-2026-03-25/: README.md  newsletter-2026-03-25.md
benchmarks/: asv.conf.json  benchmarks.py
docs/: conf.py  index.rst
fink-mcp-server/: fink_lsst_mcp-server.py
notebooks/00_fink_tools/: 01_fink_getinfofromAPI.ipynb  02_TOOLFINK_tagblocksdefinitions.ipynb  asinh.py
notebooks/01_download_view_alerts/: 01_fink_alert_browser.ipynb  02_fink_skymap.ipynb  03_fink_tag_dataset_browser.ipynb  04_fink_cutout_timeline.ipynb  README.md  fink_download_full_cutouts.py
notebooks/02_fink_api_exploration/: 01_fink_ra_histogram.ipynb  01b_fink_dec_histogram.ipynb  02_fink_healpix_skymap_statistics.ipynb  02_fink_healpix_skymap_statistics_corr.ipynb  03_fink_healpix_temporal_dynamics.ipynb  04_fink_api_statistics.ipynb  05_fink_api_blocks.ipynb  README.md
notebooks/03_fink_api_blockselections/: 01_fink_block_lightcurves.ipynb  01_fink_block_lightcurves_badOnlySSO.ipynb  01_fink_block_lightcurves_lmcsmc.ipynb  01_fink_block_lightcurves_original.ipynb  01_fink_block_lightcurves_showcalibcurves.ipynb  02_fink_block_lightcurves_replot.ipynb  02_fink_block_lightcurves_replot_lmcsmc.ipynb  02_fink_block_lightcurves_replot_original.ipynb  02_fink_block_lightcurves_replot_renormalised.ipynb  03_fink_add_visitId.ipynb  04_fink_selectDIAObject_tovisitIddetector.ipynb  04_fink_sselectDIAObject_tovisitIddetector.ipynb  05_fink_download_objects.ipynb  06_fink_color_color_diagram.ipynb  07_fink_tags_lightcurves.ipynb  08_fink_tags_lightcurves_replot.ipynb  08_fink_tags_lightcurves_replot_renormalize.ipynb  10_fink_block_AlertsStatistic_PlotFocalPlane.ipynb  README.md
notebooks/04_calib/: 01_fink_block_flatlightcurves.ipynb  01b_fink_block_control_flatlightcurves.ipynb  02_fink_block_lightcurves_replot.ipynb  02b_fink_block_lightcurves_replot.ipynb  02c_fink_block_lightcurves_statStability.ipynb  03_associateFinkAlerts-RubinVisits.ipynb  03_associateFinkAlertsLoop-RubinVisits.ipynb  03a_associateFinkAlerts-RubinVisits.ipynb  03b_check-RubinVisits.ipynb  04_relativeFlux.ipynb  04b_relativeFlux_compairmass.ipynb  04c02_relativeFlux_withfp_showdetectors.ipynb  04c_relativeFlux_withfp.ipynb  04d_relativeFlux_withfp_alllcinDDF.ipynb  04e_relativeFlux_ZP.ipynb  05_fink_block_AlertsStatistic_PlotFocalPlane.ipynb  05_fink_block_lightcurves_PlotFocalPlane.ipynb  05b_fink_block_ZP.ipynb  05c_fink_block_FluxThreshold.ipynb  06_relativeFlux_science.ipynb  07_psfFlux_scienceFlux_templateFlux.ipynb  07b_psfFlux_scienceFlux_templateFlux_compairmass.ipynb  07c_psfFlux_scienceFlux_templateFlux_showdetector.ipynb  07d_psfFlux_scienceFlux_templateFlux_compseeing.ipynb  07e_psfFlux_scienceFlux_templateFlux_FocalPlane.ipynb  08_matchFinkAlertswithGaiaDR3.ipynb  11e_dipoleAngle.ipynb  (+18 more)
scripts/: fink_download_alerts_with_cutouts.py  fink_get_new_alertes.py
(+85 files in other folders)
